<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.firemoon777.studentcardreader.MainActivity">
    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:checked="true"
        android:checkable="true"
        android:title="@string/action_debug"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_personal"
        android:orderInCategory="101"
        android:checkable="true"
        android:title="@string/action_personal_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
